add chatbot + mech interpret

--- a/_posts/2023-07-15-chatbot.md
+++ b/_posts/2023-07-15-chatbot.md
@@ -2,18 +2,18 @@
 layout: post
 title: "Chatbot with Your Data"
 subtitle: "ChatGPT + Retrieval Augmented Generation"
-background: '/img/posts/2023-03-31-chatgpt.jpg'
+background: '/img/posts/2023-07-15-chatbot.jpg'
 ---
 
 - How do you use LLMs to create chatbots to answer questions for your domain?
 - How do you keep the knowledge up-to-date after the model has already been trained?
 - How do you ensure generated answers are accurate and avoid hallucinations?
 
-Those are some common questions I've seen floating around. Unless you've been living under a rock, you're probably aware that ChatGPT, the large language model (LLM) from OpenAI released last November, has taken the world by storm. It's created excitement but also raised alarm as powerful AIs on the horizon no longer seems as far-fetched science fiction. As such, the group that I've been working with to curate quality answers to AI Safety and Alignment questions has been getting an influx of attention and volunteers. In fact, the entire fields has seen a flurry of activity.
+Those are some common questions I've seen floating around. Unless you've been living under a rock, you're probably aware that ChatGPT, the large language model (LLM) from OpenAI released last November, has taken the world by storm. It's created excitement but also raised alarm as powerful AIs on the horizon no longer seems as far-fetched science fiction. As such, the group that I've been working with to curate quality answers to AI Safety and Alignment questions has been getting an influx of attention and volunteers. In fact, the entire field has seen a flurry of activity.
 
 ## AI Safety & Alignment Chatbot
 
-A [bounty was placed on LessWrong](https://www.lesswrong.com/posts/SLRLuiuDykfTdmesK/speed-running-everyone-through-the-bad-alignement-bingo) for a conversational agent educating people on the different approaches to AI Safety and Alignment. Since I've been swamped with other work, I only had a couple days to put together a quick prototype. Fortunately, many of the components needed for the project are related to previous work I've already done with extractive question answering:
+Several months ago [bounty was placed on LessWrong](https://www.lesswrong.com/posts/SLRLuiuDykfTdmesK/speed-running-everyone-through-the-bad-alignement-bingo) for a conversational agent educating people on the different approaches to AI Safety and Alignment. Since I've been swamped with other projects, I only had a couple days to put together a quick prototype. Fortunately, many of the components needed for the project are related to previous work I've already done with extractive question answering:
 
 1. Processing, chunking, and embedding the alignment research dataset
 2. Using semantic search to retrieve relevant chunks
@@ -36,15 +36,15 @@ openai.ChatCompletion.create(
 )
 ```
 
-## Collaborating
+## Collaboration
 
-I'm excited to collaborate with other teams who also submitted prototypes and are dedicated to scaling AI safety and alignment education. It's been great learning from each other and leveraging the best aspects from each project. Some of the notable features from other projects include:
+We've been fortunate collaborate with other teams who also submitted prototypes and are dedicated to scaling AI safety and alignment education. Developers from the Stampy team also made incredible contributions to clean up our underlying dataset, which serves as the knowledge base, and also ensure we had proper infrastructure resources to get deployed. It's been great learning from everyone and leveraging the best aspects from each project. Some of the notable features from other projects include:
 
 - Detailed citations of sources with a streaming GUI
 - Using langchain to rephrase standalone improving conversational capabilities
 - Suggesting followup questions to keep the conversation flowing
 
-There are definitely other areas of improvement we all need to explore in terms of:
+There are definitely other areas of improvement we're still working on:
 
 - Cleaning up the underlying dataset
 - Prompt engineering to ensure accuracy and appropriate tone
