add wda, gdg sacrament, photo credits

--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -34,3 +34,7 @@ Overall, I tried to keep the design clean and minimalistic, allowing users to fo
 Edited to add: We had a [soft launch](https://www.lesswrong.com/posts/auPkxnLb3R9vXjEzo/all-agi-safety-questions-welcome-especially-basic-ones) for the [alpha version](https://ui.stampy.ai) in July. I also wrote about working on their [semantic search](/2022/07/05/use.html) and identifying [duplicate questions](/2022/06/14/sbert.html). If you're interested in getting involved with AGI Safety and Alignment or would like to get work on some [open source projects](https://github.com/StampyAI), please join our [Discord group](https://stampy.ai/wiki/Discord_invite)!
 
 It's been refreshing to take a little break from all the reading & studying and actually building something. Learning comes in so many shapes!
+
+{% figure caption:"Cover Photo by Ali Bakhtiari on Unsplash" %}
+&nbsp;
+{% endfigure %}
