--- a/_posts/2022-05-09-nlp-notes.md
+++ b/_posts/2022-05-09-nlp-notes.md
@@ -80,3 +80,7 @@ L = # layers/blocks, A = # attention heads, D = # dimensions, P = # params.
 | SemEval | [Workshop on Semantic Evaluatio](https://semeval.github.io/) |
 | BPE | [Byte-Pair Encoding](https://paperswithcode.com/method/bpe) | Used to tokenize & build vocabulary lists
 | TF-IDF | Term Frequency–Inverse Document Frequency | Reflects word importance for document in corpus
+
+{% figure caption:"Cover Photo by Jess Bailey on Unsplash" %}
+&nbsp;
+{% endfigure %}
