--- a/_posts/2022-06-14-sbert.md
+++ b/_posts/2022-06-14-sbert.md
@@ -69,3 +69,7 @@ The complete functional code in this [notebook](https://colab.research.google.co
 - [BERT: Bidirectional Encoder Representation for Transformers](https://arxiv.org/abs/1810.04805) (2018)
 - [RoBERTa: Robustly Optimized BERT](https://arxiv.org/abs/1907.11692) (2019)
 - [STS-b: Semantic Textual Similarity Benchmark](https://arxiv.org/abs/1708.00055v1) (2017)
+
+{% figure caption:"Cover Photo by Ralph Mayhew on Unsplash" %}
+&nbsp;
+{% endfigure %}
