--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -46,3 +46,7 @@ These are deployed on Google Cloud Run. This project gave me an excuse to learn 
 - [pinecone](https://www.pinecone.io/learn/) [[GitHub]](<https://github.com/pinecone-io>)
 - [gradio](https://www.gradio.app/getting_started/) [[GitHub]](<https://github.com/gradio-app>)
 - [streamlit](https://docs.streamlit.io/library/get-started) [[GitHub]](<https://github.com/streamlit>)
+
+{% figure caption:"Cover Photo by Jaredd Craig on Unsplash" %}
+&nbsp;
+{% endfigure %}
