--- a/_posts/2023-03-22-wtm-iwd.md
+++ b/_posts/2023-03-22-wtm-iwd.md
@@ -51,3 +51,7 @@ It was an immense honor to befriend so many smart and talented Women Techmaker A
 Overall, it was an incredibly experience and we hope to continue building our community of talented women in tech. If you're interested in joining us or attending future events, be sure to follow us on [LinkedIn](https://www.linkedin.com/company/creatives-in-tech/) and keep an eye out for our next event announcement. We hope to see you there! ⚡️
 
 This event was generously supported by [Google Women Techmakers](https://developers.google.com/womentechmakers), [WeTransact.Live](https://www.mylivestack.com/), and [Gatheround](https://gatheround.com/).
+
+{% figure caption:"Cover Photo by Hannah Busing on Unsplash" %}
+&nbsp;
+{% endfigure %}
