--- a/_posts/2022-05-25-winograd.md
+++ b/_posts/2022-05-25-winograd.md
@@ -67,3 +67,7 @@ Some would argue that pronoun disambiguation alone does not provide a reliable m
 - [GLUE Benchmark](https://gluebenchmark.com/)
 - [SuperGLUE](https://super.gluebenchmark.com/)
 - [The Defeat of the Winograd Schema Challenge](https://arxiv.org/abs/2201.02387)
+
+{% figure caption:"Cover Photo by Hans-Peter Gauster on Unsplash" %}
+&nbsp;
+{% endfigure %}
