--- a/_posts/2022-08-11-ai4all.md
+++ b/_posts/2022-08-11-ai4all.md
@@ -32,3 +32,7 @@ Since AI4ALL has a rigorous applicant screening process, all the participants we
 I can fully attest to "teaching is the best way to learn." While homeschooling my kids, I was constantly learning new material and always thinking, "How would I explain this?" That mentality forced me to think more deeply and analytically. As the kids are off in more traditional educational settings now, it's been a natural transition for me to return to my work in the technology sector and also mentor other students. Mentoring has been an excellent way to supercharge my upskilling. I previously wrote about my experience with [Technovations](/2022/06/23/technovation.html).
 
 I'd love to learn more about the many other wonderful programs out there. If you haven't had a chance to share your skills through mentoring, definitely give it a try!
+
+{% figure caption:"Cover Photo by Joshua Sortino on Unsplash" %}
+&nbsp;
+{% endfigure %}
