remove jekyll-figure

--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -35,6 +35,4 @@ Edited to add: We had a [soft launch](https://www.lesswrong.com/posts/auPkxnLb3R
 
 It's been refreshing to take a little break from all the reading & studying and actually building something. Learning comes in so many shapes!
 
-{% figure caption:"Cover Photo by Ali Bakhtiari on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Ali Bakhtiari on Unsplash</figcaption>
