--- a/_posts/2022-05-09-nlp-notes.md
+++ b/_posts/2022-05-09-nlp-notes.md
@@ -81,6 +81,4 @@ L = # layers/blocks, A = # attention heads, D = # dimensions, P = # params.
 | BPE | [Byte-Pair Encoding](https://paperswithcode.com/method/bpe) | Used to tokenize & build vocabulary lists
 | TF-IDF | Term Frequency–Inverse Document Frequency | Reflects word importance for document in corpus
 
-{% figure caption:"Cover Photo by Jess Bailey on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Jess Bailey on Unsplash</figcaption>
