--- a/_posts/2022-05-25-winograd.md
+++ b/_posts/2022-05-25-winograd.md
@@ -68,6 +68,4 @@ Some would argue that pronoun disambiguation alone does not provide a reliable m
 - [SuperGLUE](https://super.gluebenchmark.com/)
 - [The Defeat of the Winograd Schema Challenge](https://arxiv.org/abs/2201.02387)
 
-{% figure caption:"Cover Photo by Hans-Peter Gauster on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Hans-Peter Gauster on Unsplash</figcaption>
