--- a/_posts/2022-08-11-ai4all.md
+++ b/_posts/2022-08-11-ai4all.md
@@ -33,6 +33,4 @@ I can fully attest to "teaching is the best way to learn." While homeschooling m
 
 I'd love to learn more about the many other wonderful programs out there. If you haven't had a chance to share your skills through mentoring, definitely give it a try!
 
-{% figure caption:"Cover Photo by Joshua Sortino on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Joshua Sortino on Unsplash</figcaption>
