--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -47,6 +47,4 @@ These are deployed on Google Cloud Run. This project gave me an excuse to learn 
 - [gradio](https://www.gradio.app/getting_started/) [[GitHub]](<https://github.com/gradio-app>)
 - [streamlit](https://docs.streamlit.io/library/get-started) [[GitHub]](<https://github.com/streamlit>)
 
-{% figure caption:"Cover Photo by Jaredd Craig on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Jaredd Craig on Unsplash</figcaption>
