--- a/_posts/2023-03-22-wtm-iwd.md
+++ b/_posts/2023-03-22-wtm-iwd.md
@@ -52,6 +52,4 @@ Overall, it was an incredibly experience and we hope to continue building our co
 
 This event was generously supported by [Google Women Techmakers](https://developers.google.com/womentechmakers), [WeTransact.Live](https://www.mylivestack.com/), and [Gatheround](https://gatheround.com/).
 
-{% figure caption:"Cover Photo by Hannah Busing on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Hannah Busing on Unsplash</figcaption>
