--- a/_posts/2023-10-05-wda.md
+++ b/_posts/2023-10-05-wda.md
@@ -37,6 +37,4 @@ I had the privilege of being mentored by Madona Wambua, an accomplished author, 
 
 In summary, the North America Women Developer's Academy has been an enriching experience that offered more than just technical know-how. I had the chance to connect with remarkable women in the field, each contributing invaluable perspectives and insights. This empowering environment has fine-tuned my public speaking abilities and provided me with actionable tools to share knowledge effectively. I'm excited to put these skills to use at upcoming DevFest events hosted by Google Developer Groups (GDG) in Sacramento and Vancouver. This journey has not only equipped me with essential skills but also expanded my professional network, and I eagerly look forward to contributing to the tech community in meaningful ways.
 
-{% figure caption:"Cover Photo by Farsai Chaikulngamdee on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Farsai Chaikulngamdee on Unsplash</figcaption>
