--- a/_posts/2023-10-14-safer-ai.md
+++ b/_posts/2023-10-14-safer-ai.md
@@ -23,9 +23,8 @@ AI has been present in our lives for years, powering recommendations on platform
 
 Defining intelligence for AGI, like **human-level intelligence**, can be challenging to define. Alan Turing, often regarded as the father of artificial intelligence, introduced the Turing test in 1950, a benchmark where a computer and a human engage in conversation, and an interrogator tries to determine which is which. The goal is to create an intelligent thinking machine that is indistinguishable from a human.However, defining what constitutes average human intelligence is not straightforward. Nevertheless, recent advancements in AI, such as GPT-4's performance on standardized tests, suggest that human-level intelligence may be closer than we think.
 
-{% figure caption:"Photo by Yulia Matvienko on Unsplash" %}
 ![Superintelligence](/img/posts/2023-10-14-super-yulia-matvienko-kgz9vsP5JCU-unsplash.jpg)
-{% endfigure %}
+<figcaption>Photo by Yulia Matvienko on Unsplash</figcaption>
 
 **Superintelligence** represents the next level of AGI, surpassing human capabilities in all tasks. It may involve exponential self-improvement, leading to uncontrollable and irreversible technological growth. While the idea of superintelligence may seem like a significant leap forward, its implications and potential risks are complex and require careful consideration.
 
@@ -49,9 +48,9 @@ AI safety concerns extend to both outer and inner misalignment. **Outer misalign
 
 The "Gorilla Problem" highlights the unintended consequences of technological advancement. Just as humans unintentionally endangered gorillas while pursuing their goals, superintelligent AI might not harbor malice toward humans but still pose a threat due to misalignment of interests.
 
-{% figure caption:"Photo by Rob Schreckhise on Unsplash" %}
 ![Gorilla](/img/posts/2023-10-14-gorilla-rob-schreckhise-8zdEgWg5JAA-unsplash.jpg)
-{% endfigure %}
+<figcaption>Photo by Rob Schreckhise on Unsplash</figcaption>
+
 
 Open source AI models, while democratizing access to AI capabilities, also raise security concerns. Without adequate safeguards, powerful LLMs can be exploited by bad actors for malicious purposes, such as planning terrorist attacks or establishing oppressive regimes.
 
@@ -98,6 +97,4 @@ In summary, this is an exciting yet crucial era in the evolution of AI. Comparin
 
 We need to stay informed and engaged in decisions that will impact all of us. My hope is that as we navigate this complex landscape, we can do so with humility, open-mindedness, and a firm commitment to harnessing the power of AI safely and responsibly. This future is in our hands, and by working together, we can ensure that AI continues to benefit society while minimizing potential risks.
 
-{% figure caption:"Cover Photo by Marko Horvat on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Marko Horvat on Unsplash</figcaption>
