--- a/_posts/2023-07-15-chatbot.md
+++ b/_posts/2023-07-15-chatbot.md
@@ -80,6 +80,4 @@ LangChain is a valuable library that makes it easier to work with LLM from inges
 - [LangChain](https://github.com/hwchase17/langchain)
 - [LessWrong Bounty](https://www.lesswrong.com/posts/SLRLuiuDykfTdmesK/speed-running-everyone-through-the-bad-alignement-bingo)
 
-{% figure caption:"Cover Photo by Mike Lewis HeadSmart Media on Unsplash" %}
-&nbsp;
-{% endfigure %}
+<figcaption>Cover Photo by Mike Lewis HeadSmart Media on Unsplash</figcaption>
