even more photo credits

--- a/_posts/2022-01-01-archive.md
+++ b/_posts/2022-01-01-archive.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Archived Samples"
 subtitle: "Cheng2 Design Portfolio"
-background: '/img/2022/2022-01-01-archive.jpg'
+background: '/img/2021/2021-01-01-archive-jeremy-bezanger-45T8renluG8-unsplash.jpg'
 ---
 
 Here's archived work from antiquity, circa early 2000s, when most interactive work was done using the now defunct Adobe Flash and ActionScript. ([video demo](https://www.youtube.com/watch?v=h2rdDYZ_3bY))
@@ -49,3 +49,5 @@ Here's archived work from antiquity, circa early 2000s, when most interactive wo
 - D. Byrd, E. Flemming, C. A. Mueller, & C. C. Tan. (1995) [Using regions and indices in EPG data reduction](/docs/1995%20jshr38%20-%20Using%20Regions%20and%20Indices%20in%20EPG%20Data%20Reduction.pdf). Journal of Speech and Hearing Research, 38:821-827.
 - D. Byrd & C. C. Tan. (1996) [Saying consonant clusters quickly](/docs/1996%20JPhon%20-%20Saying%20consonant%20clusters%20quickly.pdf). Journal of Phonetics, 24(2):263-282.
 - [Ancient Resumé](/docs/resume-2002.pdf)
+
+<figcaption>Cover Photo by Jeremy Bezanger on Unsplash</figcaption>
