--- a/_posts/2022-07-05-use.md
+++ b/_posts/2022-07-05-use.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Semantic Search in Browser"
 subtitle: "Universal Sentence Encoder + Tensorflow.js"
-background: '/img/2022/2022-07-05-use.jpg'
+background: '/img/2022/2022-07-05-use-anton-maksimov-5642-su-BLEJ9Tjstc4-unsplash.jpg'
 ---
 
 ## Semantic Search
@@ -116,3 +116,5 @@ I've been studying machine learning for a while now, but it's been mostly theory
 - [Universal Sentence Encoder](https://arxiv.org/abs/1803.11175) (2018)
 - [Google AI for JavaScript developers with Tensorflow.js](https://www.edx.org/course/google-ai-for-javascript-developers-with-tensorflowjs)
 - [Semantic similarity tutorial](https://www.tensorflow.org/hub/tutorials/semantic_similarity_with_tf_hub_universal_encoder)
+
+<figcaption>Cover Photo by Anton Maksimov on Unsplash</figcaption>
