--- a/_posts/2023-10-14-safer-ai.md
+++ b/_posts/2023-10-14-safer-ai.md
@@ -5,6 +5,8 @@ subtitle: "Basic Concepts of AI Safety"
 background: '/img/2023/2023-10-14-safer-ai.jpg'
 ---
 
+The organizers of [GDG Sacramento DevFest](https://gdg.community.dev/events/details/google-gdg-sacramento-presents-devfest-sacramento-2023/) invited me to give a talk on AI Safety. Below are some highlights.
+
 In recent years, the field of artificial intelligence (AI) has been making significant strides, with the emergence of Large Language Models (LLMs) being at the forefront of these developments. While AI has already had a considerable impact on society, there is a growing concern about the potential risks associated with its continued advancement, leading to the emergence of the field of AI Safety.
 
 ## Understanding AI Safety
