--- a/_posts/2023-10-14-safer-ai.md
+++ b/_posts/2023-10-14-safer-ai.md
@@ -11,7 +11,7 @@ In recent years, the field of artificial intelligence (AI) has been making signi
 
 ## Understanding AI Safety
 
-When we hear the term "AI Safety," it often conjures up thoughts of ethics, bias, hallucinations, deepfakes, and job displacement. These concerns are indeed crucial and receive substantial media attention because they are already affecting our society. However, as AI becomes more powerful and exponentially faster, it is essential to look ahead and consider future challenges, much like fire prevention.
+When we hear the term "AI Safety," it often conjures up thoughts of ethics, bias, hallucinations, deepfakes, and job displacement. These concerns are indeed crucial and receive substantial media attention because they are already affecting our society. However, as AI becomes more powerful and exponentially faster, it is important to look ahead and consider future challenges, much like fire prevention.
 
 To underscore the seriousness of AI safety, consider this statement: "Mitigating the risk of extinction from AI should be a global priority alongside other societal-scale risks such as pandemics and nuclear war." This [Statement of Risk](https://www.safe.ai/statement-on-ai-risk), signed by leaders from top AI labs, including Google's DeepMind, highlights the gravity of the concerns raised by those actively involved in AI technology development.
 
@@ -19,11 +19,11 @@ Before delving deeper into AI safety, it's essential to understand some key term
 
 ### AGI: General vs. Narrow AI
 
-AI has been present in our lives for years, powering recommendations on platforms like Netflix and Amazon, facial recognition on phones, spam filters, and fraud detection. However, these are examples of Narrow Intelligence or Weak AI—specialized systems that excel at specific tasks but lack the broader capabilities of human-like Artificial General Intelligence (AGI). AGI represents a new level of AI—a jack-of-all-trades that can learn and perform a wide range of tasks, potentially surpassing human capabilities.
+AI has been present in our lives for years, powering recommendations on platforms like Netflix and Amazon, facial recognition on phones, spam filters, and fraud detection. However, these are examples of narrow intelligence — specialized systems that excel at specific tasks but lack the broader capabilities of human-like Artificial General Intelligence (AGI). AGI represents a new level of AI — a jack-of-all-trades that can learn and perform a wide range of tasks, potentially surpassing human capabilities.
 
 ### Intelligence: Human-level vs. Superintelligence
 
-Defining intelligence for AGI, like **human-level intelligence**, can be challenging to define. Alan Turing, often regarded as the father of artificial intelligence, introduced the Turing test in 1950, a benchmark where a computer and a human engage in conversation, and an interrogator tries to determine which is which. The goal is to create an intelligent thinking machine that is indistinguishable from a human.However, defining what constitutes average human intelligence is not straightforward. Nevertheless, recent advancements in AI, such as GPT-4's performance on standardized tests, suggest that human-level intelligence may be closer than we think.
+Defining intelligence for [AGI](https://arxiv.org/abs/2311.02462), like **human-level intelligence**, can be challenging. Alan Turing, often regarded as the father of artificial intelligence, introduced the imitation game in 1950, a benchmark where a computer and a human engage in conversation, and an interrogator tries to determine which is which. The goal is to create an intelligent thinking machine that is indistinguishable from a human. However, defining what constitutes average human intelligence is not straightforward. Nevertheless, recent advancements in AI, such as GPT-4's performance on standardized tests, suggest that human-level intelligence may be closer than we think.
 
 ![Superintelligence](/img/2023/2023-10-14-super-yulia-matvienko-kgz9vsP5JCU-unsplash.jpg)
 <figcaption>Photo by Yulia Matvienko on Unsplash</figcaption>
@@ -36,11 +36,11 @@ Two critical concepts in AI safety are "takeoff" and "timelines."
 
 **Takeoff** refers to the speed or trajectory of advancement from human-level AI to superintelligence. A fast takeoff can happen in a matter of days or hours, posing challenges in preparation. A slow takeoff provides more time for adaptation and co-evolution.
 
-**Timelines**, on the other hand, refer to the expected duration until superintelligence arrives. Short timelines could be within months or a few years, while long timelines may span decades, centuries, or potentially never. Recent developments, including advancements in models like ChatGPT, have shifted the perception of AI timelines to a much closer horizon.
+**Timelines**, on the other hand, refer to the expected duration until superintelligence arrives. Short timelines could be within months or a few years, while long timelines may span decades, centuries, or perhaps never. Recent developments, including advancements in models like ChatGPT, have shifted the perception of AI timelines to a much closer horizon.
 
 ### The Orthogonality Thesis
 
-The Orthogonality Thesis posits that intelligence and goals are independent. Even a superintelligent AI can have simple or nonsensical goals that may not align with human values. This concept is exemplified by the "Paperclip Maximizer" thought experiment, where an AI's sole goal is to maximize the production of paperclips, potentially leading it to turn everything, including humanity, into raw materials.
+The Orthogonality Thesis posits that intelligence and goals are independent. Even a superintelligent AI can have simple or nonsensical goals that may not align with human values. This concept can be illustrated by the "Paperclip Maximizer" thought experiment, where an AI's sole goal is to maximize the production of paperclips, potentially leading it to turn everything, including humanity, into raw materials.
 
 ### Outer and Inner Misalignment
 
@@ -52,7 +52,6 @@ The "Gorilla Problem" highlights the unintended consequences of technological ad
 
 ![Gorilla](/img/2023/2023-10-14-gorilla-rob-schreckhise-8zdEgWg5JAA-unsplash.jpg)
 <figcaption>Photo by Rob Schreckhise on Unsplash</figcaption>
-
 
 Open source AI models, while democratizing access to AI capabilities, also raise security concerns. Without adequate safeguards, powerful LLMs can be exploited by bad actors for malicious purposes, such as planning terrorist attacks or establishing oppressive regimes.
 
@@ -95,7 +94,7 @@ To stay informed and contribute to the field of AI safety, consider exploring th
 
 ## Safer AIs
 
-In summary, this is an exciting yet crucial era in the evolution of AI. Comparing AI to fire can provide a helpful analogy: when handled well, it offers warmth and incredible benefits, but if managed poorly, it can lead to catastrophic consequences. Therefore, it is of utmost importance to have a diverse range of voices actively involved in shaping our AI-driven future.
+In summary, this is an exciting yet crucial era in the evolution of AI. Comparing AI to fire can provide a helpful analogy: when handled well, it offers warmth and incredible benefits, but if managed poorly, it can lead to catastrophic consequences. Therefore, it is critical to have a diverse range of voices actively involved in shaping our AI-driven future.
 
 We need to stay informed and engaged in decisions that will impact all of us. My hope is that as we navigate this complex landscape, we can do so with humility, open-mindedness, and a firm commitment to harnessing the power of AI safely and responsibly. This future is in our hands, and by working together, we can ensure that AI continues to benefit society while minimizing potential risks.
 
